--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
   host: localhost
   pool: 5
   username: postgres
-  password: postgres
+  password: root
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -27,7 +27,7 @@ test:
   database: medios_test
   pool: 5
   username: postgres
-  password: postgres
+  password: root 
   
 production:
   <<: *default
