--- a/config/database.yml
+++ b/config/database.yml
@@ -5,30 +5,23 @@
 #
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
-  
-development:
   adapter: postgresql
   encoding: unicode
-  database: medios_development
-  host: localhost
   pool: 5
-  username: postgres
-  password: root
+  username: <%= ENV['USERNAME'] %>
+  password: <%= ENV['PASSWORD'] %>
+  host:     <%= ENV['IP'] %>
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+development:
+  <<: *default
+  database: mnygo_app_development
+
 test:
-  adapter: postgresql  
-  database: medios_test
-  pool: 5
-  username: postgres
-  password: root 
-  
+  <<: *default
+  database: mnygo_test
+
 production:
   <<: *default
   database: db/production.sqlite3
