--- a/config/database.yml
+++ b/config/database.yml
@@ -5,25 +5,25 @@
 #
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
-
 default: &default
   adapter: postgresql
-  encoding: unicode
+  #adapter: sqlite3
   pool: 5
-  username: <%= ENV['USERNAME'] %>
-  password: <%= ENV['PASSWORD'] %>
-  host:     <%= ENV['IP'] %>
+  timeout: 5000
+  username: admin
+  password: admin 
 
 development:
   <<: *default
-  database: mnygo_app_development
+  database: dbdesarrollo
 
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: mnygo_test
-
+  database: db/dbtest
 production:
   <<: *default
-  database: db/production.sqlite3
-
+  database: db/dbproduction
 
