--- a/config/database.yml
+++ b/config/database.yml
@@ -4,26 +4,29 @@
 #   gem install mysql2
 #
 # And be sure to use new-style password hashing:
-#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+
+
+
 default: &default
   adapter: postgresql
-  #adapter: sqlite3
+  encoding: unicode
   pool: 5
-  timeout: 5000
-  username: admin
-  password: admin 
+  username: <%= ENV['USERNAME'] %>
+  password: <%= ENV['PASSWORD'] %>
+  host:     <%= ENV['IP'] %>
 
 development:
   <<: *default
-  database: medios_development
+  database: mnygo_app_development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: medios_test
+  database: mnygo_test
+
 production:
   <<: *default
-  database: medios_production
+  database: mnygo_produccion 
+
+
+
 
