--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ default: &default
 
 development:
   <<: *default
-  database: mnygo_app_development_top
+  database:   mnygo_development_top
 
 test:
   <<: *default
